--- a/index.htm
+++ b/index.htm
@@ -19,10 +19,22 @@ width:300;
 
 }
 
+#cas{
+position:absolute;
+left:500;
+}
+
 </style>
 </head>
 <body>
-<img src="podcast cover.jpg" height="300" width="300">
+<center>
+<br>
+<audio controls>
+  <source src="podcast itself.ogg" type="audio/ogg">
+  <source src="podcast itself.mp3" type="audio/mpeg">
+Your browser does not support the audio element.
+</audio>
+</center>
 <p>I think this book, like every book, has morals. We can learn and absorb a lot from this book. We can reflect Peeta’s kindness or impersonate Katniss’s loyalty.
 <br>
 This book has many things you can take with you out of the book that’s what makes it a good book. If i was to give this book a rating it would be 8/10.
@@ -35,6 +47,24 @@ probably because I grew up with it but I just don't think the hunger games is th
 <br>
 This book really takes the quote of “don’t judge a book by its cover”. 
 </p>
+<img src="podcast cover.jpg" height="300" width="300" id="cas">
+<br>
+<br>
+<br>
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
 <img src="yuhe.png">
 </body>
 </html>
